# localmot

./: README.md  requirements.txt  setup.cfg
localmot/: __init__.py  horizon_util.py  horizon_util_test.py  metrics.py  metrics_test.py  motchallenge.py  plots.py  util.py
localmot/scripts/: eval_motchallenge.py
