# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = localmot
version = 1.0.dev1
author = Jack Valmadre, Alex Bewley
author_email = valmadre@google.com
description = Local metrics for multi-object tracking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/google-research/localmot
project_urls =
    Bug Tracker = https://github.com/google-research/localmot/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
license = Apache License 2.0
license_files = LICENSE

[options]
install_requires =
    absl-py
    numpy
    pandas
    scipy
packages = find:

[options.packages.find]
include = localmot*
